# Fav-Barber

./: README.md  app.py  main.py  pyproject.toml  requirements.txt  server.db
static/css/: admin_home.css  admin_login.css  appointment.css  index.css  review.css
templates/: add_review.html  admin_home.html  admin_login.html  appointments.html  index.html  review.html
