[tool.poetry]
name = "repl_python3_Fav-Barber"
version = "0.1.0"
description = ""
authors = ["LearnCode2 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
werkzeug = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
